OO-1068 fix layout issues in QTI node edit form, text-shadow in buttons in realistic theme

--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -312,6 +312,8 @@ $fa-css-prefix: "o_icon" !default;
 .o_forum_status_visible_icon:before { content: $fa-var-eye; color: $state-success-text}
 
 /* tests icons */
+.o_mi_qpool_import:before { content: $fa-var-database; }
+.o_mi_qtisection:before { content: $fa-var-cubes; }
 .o_mi_qtisc:before { content: $fa-var-dot-circle-o; }
 .o_mi_qtimc:before { content: $fa-var-check-square-o; }
 .o_mi_qtikprim:before { content: $fa-var-check-square;  }
